Refactor controller tests to call services directly (#2952)
* Improve testability across Java and TypeScript code (epic-70095)

Java changes:
- Add ConfigurationContextExtension JUnit 5 extension to centralize
  MockedStatic<ConfigurationContext> setup across 19 controller tests
- Add VSAssemblyFixture for common VS assembly test objects
- Add protected factory methods (createMailer, createSandbox) to
  VSEmailService to enable subclass-based injection in tests
- Extract ExportRequest value object and doExport() in VSExportService
  to consolidate the 4 path-based overloads
- Fix TabPropertyDialogControllerTest to test TabPropertyDialogService
  directly (controller delegates via proxy; test was using wrong class)
- Parameterize BasicAuthTest with @MethodSource and @CsvSource

TypeScript changes:
- Move HTTP calls from constructors/getters to ngOnInit in
  ScheduleConfigurationPageComponent; refactor FavoritesService and
  SsoHeartbeatDispatcherService for predictable initialization
- Extract ScheduleTaskEditorDataService from ScheduleTaskEditorPageComponent
- Add TimerService abstraction for setTimeout in PopComponentService
- Replace any types with proper CodeMirror types in CodemirrorService
- Add catchError to HTTP subscriptions in FavoritesService and
  SsoHeartbeatDispatcherService
- Add MaterialTestingModule shared test helper for em specs
- Fix 12 failing portal spec files (missing interface properties,
  constructor argument count drift, stale snapshots, NG0100 in VSSlider)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

* Refactor controller tests to call services directly

Remove ConfigurationContextExtension and the controller/proxy layer from
15 test files so they test the service directly, eliminating slow
proxy mechanism overhead. Rename test files from *ControllerTest to
*ServiceTest to reflect what they actually test.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>

---------

Co-authored-by: Claude Sonnet 4.6 <noreply@anthrop